overflow fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,3 @@
-
-
+.over-flow-x-hidden {
+  overflow-x: hidden;
+}
