--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,7 @@ h1 {
 
 body {
   background-color: var(--background-color);
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 :root {
